# scitt-api-emulator

./: .gitignore  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  LICENSE  Procfile  README.md  action.yml  app.py  dev-requirements.txt  environment.yml  github_webhook_event_notary.py  pyproject.toml  requirements.txt  run-tests.sh  run.sh  scitt_handler.py  setup.py  setup.sh  sphinx_docs_middleware.py  start.sh  view.py
.github/workflows/: coverity.yml  notarize.yml  notarize_reusable.yml
acdc_fastapi/: __init__.py  app.py  cli.py
docs/: conf.py  index.rst  oidc.md  registration_policies.md  s2c2f.md  sbom_and_vex.md  slsa_in_toto.md
github_webhook_events/: .gitignore  0000_GITHUB_WEBHOOK_EVENT_EXAMPLES.md  ACDC_with_CBOR_LD_Based_Version_of_ActivityPub_and_SCITT_Statements.md  acdc_fastapi.py  agi.py  alice.Dockerfile  check_run.action:completed.json  check_run.action:created.json  check_suite.action:completed.json  discussion_comment.action:edited.json  entrypoint-server.sh  entrypoint.sh  fetch_github_comments.py  issue_comment.action:deleted.json  issues.action:edited.json  locked-shell.sh  mailing_list_archives.py  openai_assistant_instructions.md  push.before:f10df8c5020d64d22e2818581671535d29b79d24.after:e3cc9ad852a6551d92d9eb52f13b2d3208774d41.json  server_motd  socket_pty_attach_4.py  test_eth.py  update.sh  util.sh  webhook_event_logger.py  workflow_job.action:completed.json  workflow_job.action:in_progress.json  workflow_job.action:queued.json  workflow_run.action:completed.json  workflow_run.action:in_progress.json  workflow_run.action:requested.json
methods/guest/src/: main.rs
scitt_emulator/: client.py  create_statement.py  key_loader_format_did_jwk.py  key_loader_format_url_referencing_x509.py  oidc.py  policy_engine.py  server.py
scitt_software_supply_chain_middleware/: github_webhook_notary.py  sphinx_docs_middleware.py
scitt_software_supply_chain_middleware/triggers/: git_ls_remote.py
scitt_software_supply_chain_middleware/util/: ai_fix_issue.py  kubernetes_ipv4_address_for_pod_name.py
src/: lib.rs  main.rs
tests/: test_cli.py  test_docker.py  test_docs.py  test_fastapi.py  test_github_webhook_notary.py  test_relying_party.py
