[package]
name = "scitt-api-emulator-rust-policy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scitt_api_emulator_rust_policy_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module"] }
async-openai = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.13"
neo4rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[tool.maturin]
# TODO Report errors in JSON format when AI is building
# TODO(security) maturin develop --offline to sandbox AI
# rustc-args = ["--error-format", "json"]
