[package]
name = "scitt-api-emulator-rust-policy-engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "scitt_api_emulator_rust_policy_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22.1", features = ["extension-module"] }
async-openai = "0.3"
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1", features = ["full"] }
git2 = "0.13"
neo4rs = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
pyo3-log = "0.11.0"
log = "0.4.22"

[tool.maturin]
# TODO Report errors in JSON format when AI is building
# TODO(security) maturin develop --offline to sandbox AI
# rustc-args = ["--error-format", "json"]

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
