[build-system]
requires = ["maturin[patchelf]>=1.7,<2.0"]
build-backend = "maturin"

[project]
name = "scitt-api-emulator-rust-policy-engine"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
[tool.maturin]
features = ["pyo3/extension-module"]
